--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,7 +2,7 @@
 .navbar {
     width: 85% ;
     margin: auto;
-    padding: 35px 0;
+     padding-top: 2rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -17,14 +17,8 @@
 .navbar ul li {
     list-style: none;
     display: inline-block;
-    margin: 0 20px;
+    margin: 0 10px;
     position: relative;
-}
-
-.navbar ul li {
-    list-style: none;
-    display: inline-block;
-    margin: 0 20px;
 }
 
 .navbar ul li a {
